# ab-cookiecutter

./: .gitignore  README.md  cookiecutter.json  pyproject.toml  tbump.toml  ver_test.txt
tests/: test_ab_cookiecutter.py
{{cookiecutter.project_name}}/: .flake8  .gitignore  .pre-commit-config.yaml  README.md  conftest.py  mypy.ini  pyproject.toml  setup.py  tbump.toml  tox.ini
{{cookiecutter.project_name}}/.hooks/: pre-commit  pre-push
{{cookiecutter.project_name}}/docs/source/: conf.py  index.rst  {{cookiecutter.project_name}}.rst
{{cookiecutter.project_name}}/hooks/: pre-commit.legacy
{{cookiecutter.project_name}}/notebooks/: {{cookiecutter.project_name}}.ipynb
{{cookiecutter.project_name}}/private/: __init__.py
{{cookiecutter.project_name}}/scripts/: __init__.py  main.py
{{cookiecutter.project_name}}/tests/: __init__.py  helper.py  test_{{cookiecutter.project_name}}.py
{{cookiecutter.project_name}}/tests/.testlogs/: __init__.py
{{cookiecutter.project_name}}/tests/test_data/: __init__.py
{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/: README.md  __init__.py  example.py
{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/subpackage/: __init__.py  sub_example.py
