[tool.poetry]
name = "ab-cookiecutter"
version = "0.1.2"
description = ""
authors = ["Alexander Luke Button <button.alexander@outlook.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"

[tool.poetry.group.dev.dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
