[tool.poetry]
name = "{{cookiecutter.project_name}}"
version = "0.1.0"
description = ""
authors = ["Alexander Luke Button <alexanderluke.button@unil.ch>"]

[tool.poetry.dependencies]
python = "^3.7"
pre-commit = "^2.20.0"
tbump = "^6.9.0"
mypy = "^1.2.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
