[tool.poetry]
name = "{{cookiecutter.project_name}}"
version = "0.1.0"
description = ""
authors = ["Alexander Luke Button <alexanderluke.button@unil.ch>"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.12"
pre-commit = "^2.20.0"
tbump = "^6.9.0"
mypy = "^1.2.0"
tox = "^4.5.1"
sklearn = "^0.0.post4"
torch = "^2.0.0"
pandas = "^2.0.1"
numpy = ">=1.22,<1.24"
keras = "^2.12.0"
tensorflow = "^2.12.0"
scipy = "^1.10.1"
mlflow = "^2.3.1"
matplotlib = "^3.7.1"

[tool.poetry.dev-dependencies]
pytest = "<5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
