[tool.poetry]
name = "{{cookiecutter.project_name}}"
version = "0.1.0"
description = ""
authors = ["{{cookiecutter.author_name}}"]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
pre-commit = "^2.20.0"
tbump = "^6.9.0"
mypy = "^1.2.0"
tox = "^4.5.1"
sphinx = ">=1.6,<7"
sphinx-rtd-theme = "^1.2.0"
python-docs-theme = "^2023.3.1"
setuptools = "^69.0.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
